# Picopod

./: .gitignore  .gitmodules  CMakeLists.txt  Picopod.c  Picopod.c.bac  Picopod.cpp  Picopod.h  TODO  mesh.txt  platformio.ini
.pio/libdeps/heltec_wifi_kit_32_V3/RadioLib/: .gitmodules  library.json
.pio/libdeps/heltec_wifi_kit_32_V3/RadioLib/.github/workflows/: main.yml
.pio/libdeps/heltec_wifi_kit_32_V3/RadioLib/examples/APRS/APRS_Position_LoRa/: APRS_Position_LoRa.ino
.pio/libdeps/heltec_wifi_kit_32_V3/RadioLib/examples/LoRaWAN/LoRaWAN_End_Device/: LoRaWAN_End_Device.ino
.pio/libdeps/heltec_wifi_kit_32_V3/RadioLib/examples/NonArduino/Tock/: .gitignore  CMakeLists.txt  build.sh
.pio/libdeps/heltec_wifi_kit_32_V3/RadioLib/src/: Module.h
.pio/libdeps/heltec_wifi_kit_32_V3/RadioLib/src/modules/LLCC68/: LLCC68.h
.pio/libdeps/heltec_wireless_stick_lite/RadioLib/: CMakeLists.txt  README.md  keywords.txt
.pio/libdeps/pico/RadioLib/: .gitignore  README.md  keywords.txt  library.json  library.properties
.pio/libdeps/pico/RadioLib/.github/ISSUE_TEMPLATE/: feature_request.md  module-not-working.md  regular-issue.md
.pio/libdeps/pico/RadioLib/src/: ArduinoHal.cpp  ArduinoHal.h  BuildOpt.h  BuildOptUser.h  Hal.cpp  Module.cpp  TypeDef.h
.pio/libdeps/pico/RadioLib/src/utils/: FEC.h
.pio/libdeps/twatch-s3/RadioLib/: CMakeLists.txt  library.properties
.pio/libdeps/twatch-s3/RadioLib/.github/ISSUE_TEMPLATE/: bug_report.md
.pio/libdeps/twatch-s3/RadioLib/.github/workflows/: codeql-analysis.yml  doxygen.yml  main.yml
.pio/libdeps/twatch-s3/RadioLib/src/: Hal.cpp  Hal.h  Module.cpp  Module.h  RadioLib.h
.pio/libdeps/twatch-s3/RadioLib/src/utils/: CRC.h  Cryptography.cpp  Cryptography.h  FEC.cpp
documents/: design of packets.eddx  picopod.epgz
lib/: CMakeLists.txt
lib/DTP/: CMakeLists.txt  DTP.h  gerealsettings.h
lib/IOUSBBT/: CMakeLists.txt  IOUSBBT.cpp  IOUSBBT.h
lib/bluetooth/: CMakeLists.txt  bluetooth.cpp  bluetooth.h
lib/lcmm/: CMakeLists.txt  lcmm.cpp  lcmm.h
lib/lora/: CMakeLists.txt  LoRa-RP2040.cpp  LoRa-RP2040.h  Print.cpp  Print.h
lib/loraairtime/: CMakeLists.txt  LoraAirtime.cpp  LoraAirtime.h
lib/loramessenger/: CMakeLists.txt  loramessenger.cpp  loramessenger.h
lib/mac/: CMakeLists.txt  CMakelists.txt  mac.cpp  mac.h
lib/mathextension/: CMakeLists.txt  mathextension.cpp  mathextension.h
lib/microtcp/: CMakeLists.txt  microtcp.h
lib/voltage/: CMakeLists.txt  voltage.c  voltage.cpp  voltage.h
lorawatch/: picowatch.cpp  picowatch.ino  picowatch.ino.cpp
lorawatch/lib/lcmm/: lcmm.cpp  lcmm.h
lorawatch/lib/mac/: mac.cpp  mac.h
lorawatch/lib/mathextension/: mathextension.cpp
lorawatch/watch/functions/: ir_jammer.cpp
lorawatch/watch/setup/: watch_setup.cpp  watch_setup.h
src/: LilyGoLib.cpp  LilyGoLib.h  main.cpp
(+137 files in other folders)
